# ATria-rs

./: .gitignore  Cargo.toml  README.md  atria_rs.hxx
src/: atria_rs.cxx  atria_rs.hxx  dijkstra.cxx  dijkstras.rs  lib.rs
src/ffi/: mod.rs
tests/: bacteria_test.rs  corrP.never.csv  corrP.never.noa.expected  full_integration.rs  integration_test.rs  matrix_test.rs
