[package]
name = "atria-rs"
version = "0.1.0"
authors = ["Joseph R. Quinn <423821+quinnjr@users.noreply.github.com>"]
edition = "2018"
description = "Library for running the Ablatio Triadum (ATria) centrality algorithm (Cickovski et al, 2015, 2017)."
license = "MIT"
keywords = []
build = "build.rs"

[lib]
name = "ATriaPlugin"
crate-type = ["lib", "cdylib"]

[dependencies]
csv = "1.1.3"
libm = "0.2.1"
log = "0.4.11"
rayon = "1.4.1"
serde = "1.0.116"
cpp = "0.5.5"

[dependencies.pluma-plugin-trait]
git = "https://github.com/quinnjr/pluma-plugin-trait"
branch = "develop"

[build-dependencies]
cpp_build = "0.5"

[profile.release]
opt-level = 3
lto = true
panic = "abort"
